After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744468 - Wrong conditional requests for fresh resources when must-revalidate is present
Wrong conditional requests for fresh resources when must-revalidate is present
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
2.49.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2015-02-13 12:53 UTC by Carlos Garcia Campos
Modified: 2015-02-17 07:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (4.36 KB, patch)
2015-02-13 12:54 UTC, Carlos Garcia Campos
committed Details | Review

Description Carlos Garcia Campos 2015-02-13 12:53:22 UTC
The cache is unconditionally returning SOUP_CACHE_RESPONSE_NEEDS_VALIDATION for any cached resource when must-revalidate is present in cache control header. But the spec says that must-revalidate only applies to resources that are already stale, not to fresh resources. This causes a lot of conditional requests in some servers that always include the must-revalidate directive.
Comment 1 Carlos Garcia Campos 2015-02-13 12:54:51 UTC
Created attachment 296774 [details] [review]
Patch
Comment 2 Sergio Villar 2015-02-13 14:08:29 UTC
Review of attachment 296774 [details] [review]:

Awesome catch. It's a lgtm.
Comment 3 Carlos Garcia Campos 2015-02-17 07:39:07 UTC
Comment on attachment 296774 [details] [review]
Patch

Pushed.